20 July 2012
	Analysis of Spatial Extent in Charge-Transfer Excitations implemented (See Le Bahers et al., J. Chem. Theory Comput. 2011, 7, 2498–2506)

19 July 2012
	NCI (non-covalent interactions index) analysis implemented (see Johnson et al., J. Am. Chem. Soc. 132, 6498 (2010))
	Dummy atom in an orca input file bug fixed
	Read orbitals&Geometry from an orca  ouput file with a dummy atom, bug fixed
	Insert a non-bonded atom in "Draw geometry window" bug fixed

07 July 2012 :
	Psi4 partially supported : input file, geometries, frequencies, UV Spectrum

20 June 2012 :
	Bug fixed : computing of double&triple bonds

10 June 2012 :
	Warning with -Wformat have been fixed

29 March 2012 :
	Several Filters (Gaussian, Blackman, Blackman-Harris,...) implemented in XYPlot window (not fully tested)

08 Marsh 2012 :
	read gamess geometries in Display window :  bug fixed

02 Marsh 2012 :
	NBO basis (file .31) : read any type of orbitals

27 February 2012 :
	NBO basis (file .31) : read geometry

06 October 2011 :
	Orca input file : constraint removed if no fixed atom.

03 October 2011 :
	Bug fixed for saving geometry in mol format

15 September 2011 :
	Bug fixed for reading orbitals from a ORCA output file
	Bug fixed for drawing colorcoded planes (under windows OS)

13 Jyly 2011 :
	NWChem is now supported
	Geometry and charges can be read from a aimall sum file

10 June 2011 :
	Bug fixed for animated vibration/threshold
	Bug fixed : orbitals molpro (define NOrb)

1 June 2011 :
	Group of the third atom can be rotated in Draw Geom window.

30 April 2011 :
	pair radial distribution
	RMSD for a trajectory
	Reading dipole from a ADMP output file and computing of auto correlation dipole function (not fully tested)

7 April 2011 :
	Fourier Transformation in GabexitXYPlot window (not fully tested)

5 April 2011 :
	Orthonormalization of Mopac MO (only normalisation on old versions)

10 Mars 2011 :
	Local rotation bug fixed
	Screen capture (using png or tif) under window bug fixed 
