@@ -1,0 +1,35 @@
+# unix (Mac OSX, linux, aix, hp, dec ...) config
+# PKG_CONFIG_PATH  = "/usr/local/lib/pkgconfig:/usr/lib/pkgconfig"
+# GTKLIB = -Wl,--export-dynamic -L/usr/local/lib -lgtk-x11-2.0 -lgdk-x11-2.0 -latk-1.0 -lgdk_pixbuf-2.0 -lm -lpangoxft-1.0 -lpangox-1.0 -lpango-1.0 -lgobject-2.0 -lgmodule-2.0 -ldl -lglib-2.0
+# GTKCFLAGS = -I/usr/local/include/gtk-2.0 -I/usr/local/lib/gtk-2.0/include -I/usr/X11R6/include -I/usr/local/include/atk-1.0 -I/usr/local/include/pango-1.0 -I/usr/include/freetype2 -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include
+
+#GTKLIB = `pkg-config gtk+-2.0 --libs` -lpangox-1.0  `pkg-config gtkglext-1.0 --libs`
+GTKGLLIB = -Wl,--export-dynamic -L/home/theochem/allouche/gtkglext-1.2.0/lib -lgtkglext-x11-1.0 -lgdkglext-x11-1.0
+GTKGLINC = -I/home/theochem/allouche/gtkglext-1.2.0/include/gtkglext-1.0
+GTKLIB = `pkg-config gtk+-2.0 --libs` -lpangox-1.0 $(GTKGLLIB)
+GTKCFLAGS =  `pkg-config gtk+-2.0 --cflags`   $(GTKGLINC) 
+#OGLLIB=-L/usr/X11R6/lib -lGL -L/usr/X11R6/lib -lGLU
+OGLLIB=-L/usr/lib -lGL -L/usr/lib -lGLU 
+#OGLCFLAGS=-I/usr/X11R6/include
+OGLCFLAGS=-I/usr/include  
+LIBPTHREAD    = -lpthread
+RM = rm -f
+RMTMP = rm -f tmp/*
+MAKE = make
+MKDIR = mkdir -p
+WIN32LIB   = 
+X11LIB   = -lX11
+CC = gcc 
+enable_omp = 1
+ifeq ($(enable_omp),1)
+OMPLIB=-L/usr/lib -lgomp
+OMPCFLAGS=-DENABLE_OMP -fopenmp
+endif
+#DRAWGEOMGL= 
+DRAWGEOMGL=-DDRAWGEOMGL
+
+#COMMONCFLAGS = -Wall -O2 -DENABLE_DEPRECATED $(OMPCFLAGS) $(DRAWGEOMGL)
+COMMONCFLAGS = -Wformat  -fstack-protector --param=ssp-buffer-size=4   -D_FORTIFY_SOURCE=2 -O2 -DENABLE_DEPRECATED $(OMPCFLAGS) $(DRAWGEOMGL)
+LDFLAGS = -Wl,-z,relro
+
+
