@@ -52,7 +52,7 @@ DEALINGS IN THE SOFTWARE.
 
 #define MAJOR_VERSION    2
 #define MINOR_VERSION    4
-#define MICRO_VERSION    4
+#define MICRO_VERSION    5
 
 /**** Structures *********/
 typedef struct _FileOpen
