@@ -1,15 +1,0 @@
-/********************************************************/
-void gl_read_first_nwchem_file(GabeditFileChooser *SelecFile, gint response_id)
-{
- 	gchar *FileName;
-	if(response_id != GTK_RESPONSE_OK) return;
- 	FileName = gabedit_file_chooser_get_current_file(SelecFile);
-	gtk_widget_hide(GTK_WIDGET(SelecFile));
-	while( gtk_events_pending() ) gtk_main_iteration();
-
-	add_objects_for_new_grid();
- 	gl_read_nwchem_file_geomi(FileName,1);
-	RebuildGeom = TRUE;
-	if(this_is_a_new_geometry()) free_objects_all();
-	glarea_rafresh(GLArea);
-} 
